Updated config to use locustio 0.14.2

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -1,8 +1,8 @@
 packages:
   yum:
     gcc-c++: []
-  python:
-    gevent: ["1.2.2"]
+  # python:
+  #   gevent: ["1.2.2"]
 
 option_settings:
   aws:elasticbeanstalk:application:environment:
@@ -10,8 +10,18 @@ option_settings:
     EB_ENV_NAME: '`{"Ref" : "AWSEBEnvironmentName"}`'
 
 commands:
-  install_locustio:
-    command: "pip install locustio==0.8.1"
+  01_install_python36setuptools:
+    command: "yum -y install python36-setuptools"
+  02_install_pip3:
+    command: "easy_install-3.6 pip"
+  03_install_python_devel:
+    command: "yum -y install python36-devel"
+  # 04_install_locustio:
+  #   command: "pip install locust"
+  14_install_locustio:
+    command: "pip install locustio==0.14.2" #works
+  # 99_install_locustio:
+  #   command: "pip install locustio"
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
   copy_deploy_manifest:
@@ -26,4 +36,3 @@ files:
     content: |
       /var/log/locust-master*.log
       /var/log/locust-follower*.log
-
