Updated with Locust 0.14.6

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -17,9 +17,11 @@ commands:
   03_install_python_devel:
     command: "yum -y install python36-devel"
   # 04_install_locustio:
-  #   command: "pip install locust"
+  #   command: "pip install locustio"
+  # 05_install_locust:
+  #   command: "pip3 install locust"
   14_install_locustio:
-    command: "pip install locustio==0.14.2" #works
+    command: "pip install locustio==0.14.6" #works
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
   copy_deploy_manifest:
