Seems to be working.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -10,24 +10,34 @@ option_settings:
     EB_ENV_NAME: '`{"Ref" : "AWSEBEnvironmentName"}`'
 
 commands:
-  01_install_python36setuptools:
-    command: "yum -y install python36-setuptools"
-  02_install_pip3:
-    command: "easy_install-3.6 pip"
-  03_install_python_devel:
-    command: "yum -y install python36-devel"
-  # 04_install_locustio:
-  #   command: "pip install locustio"
-  # 05_install_locust:
-  #   command: "pip3 install locust"
-  14_install_locustio:
-    command: "pip install locustio==0.14.6" #works
+  # 01_install_python36_setuptools:
+  #   command: "yum -y install python36-setuptools"
+  # 02_install_pip3:
+  #   command: "easy_install-3.6 pip"
+  # 03_install_python_devel:
+  #   command: "yum -y install python36-devel"
+  # 04_upgrade_pip:
+  #   command: "pip install --upgrade pip"
+  # 14_install_locustio:
+  #   command: "pip install locustio==0.14.2" #works
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
   copy_deploy_manifest:
     command: "cp /opt/elasticbeanstalk/deploy/manifest /tmp/; chmod 777 /tmp/manifest"
 
 files:
+  # add configuration to display the locust log files when tailing logs
+  "/opt/elasticbeanstalk/hooks/appdeploy/pre/setuplocust.sh":
+    owner: root
+    group: root
+    mode: "000755"
+    content: |
+      #!/bin/bash
+      whoami
+      yum -y install python36-setuptools python36-devel
+      easy_install-3.6 pip
+      /usr/local/bin/pip3 install locustio==0.14.2
+
   # add configuration to display the locust log files when tailing logs
   "/opt/elasticbeanstalk/tasks/taillogs.d/locustio.conf":
     owner: root
