--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -36,6 +36,7 @@ files:
       whoami
       yum -y install python36-setuptools python36-devel
       easy_install-3.6 pip
+      export PATH="/usr/local/bin:$PATH"
       /usr/local/bin/pip3 install locustio==0.14.2
 
   # add configuration to display the locust log files when tailing logs
