--- a/.ebextensions/resources.config
+++ b/.ebextensions/resources.config
@@ -1,3 +1,14 @@
+# Copyright 2015-2015 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License"). You may not use this file
+# except in compliance with the License. A copy of the License is located at
+#
+#     http://aws.amazon.com/apache2.0/
+#
+# or in the "license" file accompanying this file. This file is distributed on an "AS IS"
+# BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+# License for the specific language governing permissions and limitations under the License.
+
 Resources:
   MasterIPTable:
     Type: AWS::DynamoDB::Table
@@ -10,7 +21,7 @@ Resources:
     Properties:
       FromPort: "9876"
       ToPort: "9876"
-      GroupId: { "Fn::GetAtt": ["AWSEBSecurityGroup", "GroupId"] }
+      GroupName: { "Ref": "AWSEBSecurityGroup" }
       IpProtocol: "tcp"
       SourceSecurityGroupId: { "Fn::GetAtt": ["AWSEBSecurityGroup", "GroupId"] }
   FollowerToMaster:
@@ -18,6 +29,6 @@ Resources:
     Properties:
       FromPort: "5557"
       ToPort: "5558"
-      GroupId: { "Fn::GetAtt": ["AWSEBSecurityGroup", "GroupId"] }
+      GroupName: { "Ref": "AWSEBSecurityGroup" }
       IpProtocol: "tcp"
       SourceSecurityGroupId: { "Fn::GetAtt": ["AWSEBSecurityGroup", "GroupId"] }
